[package]
name = "library_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.14"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
url = "2.4"


